--- a/code/20210403-StickyPore/c_rangap-sequence/makefile
+++ b/code/20210403-StickyPore/c_rangap-sequence/makefile
@@ -5,7 +5,7 @@ default:
 fig4a: fig4a_matlab fig4a_python
 
 fig4a_matlab:
-	~/Documents/*/*/*/matlab -nodisplay -nosplash -nojvm -r "simulate_fig4a; exit;"
+	~/Documents/*/*2021b/*/matlab -nodisplay -nosplash -nojvm -r "simulate_fig4a; exit;"
 
 fig4a_python:
 	. ../../venv/*/activate && cd python && python *_fig4a.py
